[tool.poetry]
name = "progression"
version = "0.2.0"
description = "advanced progress bar in ASCII art"
license = "BSD (3 clause)"
authors = [
    "Richard Hartmann <richard.hartmann@tu-dresden.de>"
]
readme = "README.rst"
repository = 'https://github.com/cimatosa/progression'
keywords = ["progress bar", "ascii art", "multiprocess"]

classifiers = [
    'Operating System :: Unix',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'License :: OSI Approved :: BSD License',
    'Topic :: Utilities',
    'Intended Audience :: Developers',
]


[tool.poetry.dependencies]
python = "^3.4"
ipywidgets = "^8.1.0"
ipython = "^8.14.0"



[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
numpy = "^1.13.0"
psutil = "^5.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
